[project]
name = "pytorch-tsmixer"
version = "0.1.1"
authors = [
  { name="Konstantin Ditschuneit" }
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
description = "An pytorch-based reimplementation of TSMixer."
dependencies = ["torch>1.6"]
optional-dependencies = { test=["hypothesis","pre-commit"] }
urls = { Homepage= "https://github.com/ditschuk/pytorch-tsmixer" }

[tool.setuptools]
packages = ["torchtsmixer"]

[tool.black]
line-length = 92
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '.+/(dist|.venv|venv|build)/.+'


[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 92
sections = [
    "FUTURE",
    "STDLIB",
    "THIRDPARTY",
    "FIRSTPARTY",
    "LOCALFOLDER"
]
skip = '''
    .tox
    __pycache__
    *.pyc
    .env
    venv*/*
    .venv/*
    reports/*
    dist/*
'''


[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
